--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -6,11 +6,54 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/teal_200"
     tools:context=".InicioActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/menuOpciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HOliiiiis" />
+        android:text="Bienvenido"
+        android:textSize="40sp"
+        android:textColor="@color/background_fristapp"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="50dp"
+        />
+
+
+    <Button
+        android:id="@+id/registrarCita"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registrar Cita"
+        android:textColor="#8BC34A"
+        android:paddingStart="16dp"
+        android:backgroundTint="@color/teal_700"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textSize="30sp"
+        android:layout_gravity="center"
+        android:elevation="4dp" />
+        />
+
+    <Button
+        android:id="@+id/listarCita"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Listar Cita"
+        android:textColor="#8BC34A"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:backgroundTint="@color/teal_700"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textSize="30sp"
+        android:layout_gravity="center"
+        android:elevation="4dp"
+        />
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
