--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#95DAD4</color>
+    <color name="teal_700">#6277EA</color>
+    <color name="red">#910404</color>
+    <color name="orange">#E16F0B</color>
+
+    <color name="background_fristapp">#123313</color>
+    <color name="background_control_selected">#43BF43</color>
+    <color name="background_control">#165317</color>
+    <color name="title_text">#031504</color>
 </resources>
